Feat/allow direction change (#49)
